<resources>
    <string name="app_name">WalkThrough</string>
    <string name="join_now">Join now</string>
    <string name="signin">Sign in</string>
    <string name="create_identity">Create your professional identity.</string>
    <string name="name">Judy Anderson</string>
    <string name="profession">Web developer, Otherco Inc.</string>
    <string name="area">San Fransico Bay Area</string>
    <string name="connected">Connected</string>
    <string name="connect">Connect</string>
    <string name="connect_and_touch">Connect and keep in touch with your network</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="signup_string"><u>Don\'t have an account, Create One!</u></string>
</resources>
