<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/create_identity"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_20"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_title"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/text_20" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/profession"
                        android:textSize="@dimen/text_20" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/area"
                        android:textSize="@dimen/text_20" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:id="@+id/ll_connect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_connect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ticked"
                            android:drawablePadding="15dp"
                            android:padding="10dp"

                            android:text="@string/connected"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_20" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imageView1"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_width"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/woman"
            app:riv_border_color="@color/white"
            app:riv_border_width="2dip"
            app:riv_corner_radius="30dip"
            app:riv_mutate_background="true"
            app:riv_oval="true"
            app:riv_tile_mode="clamp" />

    </RelativeLayout>
</RelativeLayout>
